# GIAIC_PYTHON_CLASSES

Class_01_Cursor_Set-up/: main.py
Class_03_how_work_python/: app.py
Class_04/: hello.py
Class_05/: app.py
Class_06_Set_Dict_Comprihension/: app.py
Class_07_LLM/: .env  pyproject.toml
Class_07_LLM/src/class_07_llm/: __init__.py  app.py
Class_08_set_Comp_&_lambda_methods/: app.py
Class_09_Function/: app.py
Class_10_Import_modules/: app.py  index.py
Class_11_Error_handling/: app.py
Class_12_Raise_Error_OOP/: app.py
Class_13_OOP_Inheritnce_Multiple_Inheritance/: app.py
Class_14_Polymorphism_Method_Overidng_&_Duck_Typing/: app.py
Class_15_OOP_Encapsulation/: app.py
Class_16_OOP_Abstration/: app.py  main.py
Class_17_Dunder-methods_Decorater-Function_Generater-Function/: app.py  file.txt
Class_18_is_in_async_await_unpacking_ternary_operators/: app.py
Class_19_OOPs_for_Viva_Part_01/: main.py
Class_20_OOPs_for_Viva_Part_02/: main.py
Class_20_Requests_Library/: main.py  pyproject.toml
Class_21_OOPs_for_Viva_Part_03/: main.py
Class_4.1_Streamlit/: hello.py
